--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -6,6 +6,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 5px 3px;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 .status-bar__column {
   width: 33%;
